--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+server.port=8080
+# port 설정
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+# DB 설정
+
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/team1?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+#DB 접속 주소 (현재 root DB 끌어쓰고 있으니 마지막 단계에서 사용할 DB 수정 바람. )
+
+
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=1234
+# DB에 설정된 계정, 비밀번호 수정 필요
+
+
+spring.datasource.hikari.connection-test-query=SELECT 1
+#이게 뭔지 모르겠음.
+
+
+
+mybatis.configuration.map-underscore-to-camel-case=true
+#카멜 케이스 사용 유무 - 사용중
+
+spring.mvc.hiddenmethod.filter.enabled=true
+#rest 방식 사용 시 form 태그 안 input 태그 중 name 속성값이 _메서드인 경우 해당 태그의 값에 의해 전송 방식 변경 가능
+# → spring mvc :  hidden method 기능을 사용할 수 있게 해주며 delete, put 같은 메서드를 사용 가능하게 해줌
+# 외부 메서드를 내부적으로 사용할 수 있게 함.
 
